[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/MusicControls.gd" type="Script" id=1]
[ext_resource path="res://fonts/Oswald-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/up.png" type="Texture" id=4]
[ext_resource path="res://fonts/Oswald-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ui_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/previous.png" type="Texture" id=7]
[ext_resource path="res://scripts/templabel.gd" type="Script" id=8]
[ext_resource path="res://assets/toast.wav" type="AudioStream" id=9]
[ext_resource path="res://scripts/steam.gd" type="Script" id=10]
[ext_resource path="res://assets/next.png" type="Texture" id=11]
[ext_resource path="res://unknown.png" type="Texture" id=12]
[ext_resource path="res://scenes/PageBrain.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/advanced.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/Popup.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Staatliches-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 39
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/Oswald-Bold.ttf"

[sub_resource type="DynamicFont" id=7]
size = 60
extra_spacing_bottom = 4
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 60
extra_spacing_bottom = 4
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 45
outline_color = Color( 0.933333, 0.882353, 0.811765, 1 )
extra_spacing_bottom = 4
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 3 )

[node name="steam" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )

[node name="templabel" type="Label" parent="."]
margin_left = 528.0
margin_top = 24.0
margin_right = 1408.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 5 )
text = "LATEST FROM THE BLOG:"
align = 1
script = ExtResource( 8 )

[node name="advlabel" type="Label" parent="."]
margin_left = 528.0
margin_top = 24.0
margin_right = 1412.0
margin_bottom = 136.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 5 )
text = "ADVANCED OPTIONS"
align = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -80.0

[node name="SFX" type="AudioStreamPlayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 118.0
margin_top = 792.0
margin_right = 349.0
margin_bottom = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Update" type="Button" parent="VBoxContainer"]
margin_right = 231.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Update"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 231.0
margin_bottom = 69.0
custom_styles/separator = SubResource( 4 )

[node name="Update2" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 62.0
margin_right = 231.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "throw error"

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
visible = false
margin_top = 70.0
margin_right = 231.0
margin_bottom = 74.0
custom_styles/separator = SubResource( 4 )

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 231.0
margin_bottom = 77.0
custom_styles/separator = SubResource( 4 )

[node name="Verify" type="Button" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 231.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Verify"

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 231.0
margin_bottom = 150.0
custom_styles/separator = SubResource( 4 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 231.0
margin_bottom = 158.0

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 231.0
margin_bottom = 166.0
custom_styles/separator = SubResource( 4 )

[node name="Advanced" type="Button" parent="VBoxContainer"]
margin_top = 170.0
margin_right = 231.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Advanced"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -361.0
margin_right = 1559.0
margin_bottom = 1080.0
texture = ExtResource( 12 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_top = 0.407407
anchor_bottom = 0.45
margin_left = 40.0
margin_top = 128.0
margin_right = 372.0
margin_bottom = 274.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 332.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 7 )
text = "INSTALLED:"

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_top = 10.0
margin_right = 332.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 8 )
text = "LATEST:"

[node name="Label" type="Label" parent="."]
margin_left = 96.0
margin_top = 16.0
margin_right = 428.0
margin_bottom = 106.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "OFTOAST II"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 528.0
margin_top = 128.0
margin_right = 1412.0
margin_bottom = 1064.0

[node name="BlogPanel" parent="VBoxContainer3" instance=ExtResource( 13 )]
margin_right = 884.0
margin_bottom = 936.0
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer3"]
visible = false
margin_top = 932.0
margin_right = 884.0
margin_bottom = 936.0

[node name="Label" type="Label" parent="VBoxContainer3"]
visible = false
margin_top = 902.0
margin_right = 884.0
margin_bottom = 936.0
text = "NOW PLAYING: \"Waiting for Toast\" ~ Mattie"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer3"]
visible = false
margin_top = 880.0
margin_right = 884.0
margin_bottom = 884.0

[node name="Label2" type="Label" parent="VBoxContainer3"]
visible = false
margin_top = 865.0
margin_right = 884.0
margin_bottom = 936.0
custom_fonts/font = SubResource( 9 )
text = "Downloading..."
align = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer3"]
visible = false
margin_top = 926.0
margin_right = 884.0
margin_bottom = 936.0
rect_min_size = Vector2( 0, 10 )
step = 0.1
percent_visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_left = 72.0
margin_top = 464.0
margin_right = 400.0
margin_bottom = 560.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 106.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer"]
margin_left = 110.0
margin_right = 217.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer"]
margin_left = 221.0
margin_right = 328.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 11 )
expand = true

[node name="Popup1" parent="." instance=ExtResource( 15 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 32.0
margin_right = 704.0
margin_bottom = 333.0
rect_min_size = Vector2( 400, 140 )

[node name="AdvancedPanel" parent="." instance=ExtResource( 14 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 528.0
margin_top = 128.0
margin_right = 1412.0
margin_bottom = 1026.0

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 232.0
margin_top = 184.0
margin_right = 1224.0
margin_bottom = 896.0
window_title = "Open a Directory"
mode = 2
access = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="error_handled" from="." to="." method="_on_error_handled"]
[connection signal="file_done" from="." to="." method="_on_Control_file_done"]
[connection signal="pressed" from="VBoxContainer/Update" to="." method="_on_Update_pressed"]
[connection signal="pressed" from="VBoxContainer/Update2" to="." method="_throw_error"]
[connection signal="pressed" from="VBoxContainer/Verify" to="." method="_on_Verify_pressed"]
[connection signal="pressed" from="VBoxContainer/Advanced" to="." method="_on_Advanced_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton" to="HBoxContainer" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton2" to="HBoxContainer" method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton3" to="HBoxContainer" method="_on_TextureButton3_pressed"]
[connection signal="picker_open" from="AdvancedPanel" to="." method="_on_AdvancedPanel_picker_open"]
[connection signal="dir_selected" from="FileDialog" to="AdvancedPanel" method="_on_FileDialog_dir_selected"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
